fixed about sidebar margin on mobile

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -480,6 +480,7 @@ blockquote {
       display: block;
       width: 100%;
       text-align: center;
+      margin-left: 0;
     }
     .recent-blog-posts {
       width: 100%;
